# tictactAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py  ai_player.py  board.py  evaluator.py  game.py  main.py  output.py  player.py  tictactai.py
src/tictactai/: __init__.py  ai_player.py  evaluator.py  game.py  output.py  player.py  tictactai.py
tests/: test_board.py  test_evaluator.py  test_game.py  test_game_ai.py  test_player_board.py
tictactai/: ai_player.py  evaluator.py  game.py  output.py  player.py  tictactai.py
