[metadata]
name = tictactai-donutboy
version = 1.0.2
author = Daniel Ng
author_email = dndanielng@gmail.com
description = Play tic tac toe with an AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/donutboy929/tictactAI
classifiers =
    Development Status :: 5 - Production/Stable,
    Topic :: Games/Entertainment :: Board Games,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.9,
description-file = README.md

[aliases]
test=pytest